# soundlab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/envelope/: linear_adsr.rs  mod.rs
src/polyphony/: mod.rs
src/voice/: mod.rs
